--- a/app/items/item-list/item-list.component.html
+++ b/app/items/item-list/item-list.component.html
@@ -17,31 +17,23 @@
   </div>
   <div class='has-error'></div>
   <div class="row" *ngIf='items && items.length'>
-    <div class="col-sm-6 col-md-4" *ngFor='let item of items | itemFilter:filterBy'>
+    <div class="col-sm-4 col-lg-4 col-md-4" *ngFor='let item of items | itemFilter:filterBy'>
       <div class="thumbnail">
-        <div class="media">
-          <div class="row">
-            <div class="col-md-11">
-              <h4 class="media-heading">Media heading</h4>
-            </div>
-            <a data-toggle="modal" href="#{{item.productId}}Modal">
+          <img src="http://placehold.it/320x150" alt="">
+          <div class="caption">
+              <h4 class="pull-right">${{ item.price }}</h4>
+              <h4><a href="#">{{ item.productName }}</a>
+              <a data-toggle="modal" href="#{{item.productId}}Modal">
               <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
             </a>
+              </h4>
+              <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
           </div>
-          <div class="media-body">
-            <div class="caption">
-              <h4>Thumbnail label</h4>
-              <p>Product: {{ item.productName }}</p>
-              <p>Code: {{ item.productCode }}</p>
-              <p>Price: {{ item.price }}</p>
-              <p>Rating: <stars [rating]='item.starRating' (ratingClicked)='onRatingClicked($event)'></stars> </p>
-            </div>
-          </div>
-          <div class="media-right media-middle">
-            <img *ngIf='showImg'
-               [src]='item.imageUrl'
-               [style.width.px]='imgWidth'
-               [style.margin.px]='imgMargin'>
+          <div class="ratings">
+              <p class="pull-right">15 reviews</p>
+              <p>
+                <stars [rating]='item.starRating' (ratingClicked)='onRatingClicked($event)'></stars>
+              </p>
           </div>
           <div class="row">
             <div class="col-md-10">
@@ -64,10 +56,7 @@
               <textarea></textarea>
             </div> -->
           </div>
-        </div>
       </div>
     </div>
   </div>
 </div>
-
-
