--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -9,11 +9,11 @@
         <form>
           <div class="form-group">
             <label for="productName">Product Name</label>
-            <input class="form-control" id="productName" placeholder="Name" [(ngModel)]="productName">
+            <input class="form-control" id="productName" placeholder="Name" [(ngModel)]="itemName">
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
-            <input class="form-control" id="productCode" placeholder="Code" [(ngModel)]="productCode">
+            <input class="form-control" id="productCode" placeholder="Code" [(ngModel)]="itemCode">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem()'>Save & Close</button>
