--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -6,17 +6,18 @@
         <h4 class="modal-title" id="itemCreateModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <form>
+        <form (ngSubmit)="submitItem()" #createForm="ngForm">
           <div class="form-group">
             <label for="productName">Product Name</label>
-            <input class="form-control" id="productName" placeholder="Name" [(ngModel)]="itemName">
+            <input class="form-control" id="productName" placeholder="Name" required [(ngModel)]="itemName" ngControl="name" #name="ngForm">
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">Name is required</div>
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
             <input class="form-control" id="productCode" placeholder="Code" [(ngModel)]="itemCode">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem()'>Save & Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" [disabled]="!createForm.form.valid">Save & Close</button>
           </div>
         </form>
       </div>
