--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -6,18 +6,18 @@
         <h4 class="modal-title" id="itemCreateModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <form (ngSubmit)="submitItem()" #createForm="ngForm">
+        <form #createForm="ngForm">
           <div class="form-group">
             <label for="productName">Product Name</label>
-            <input class="form-control" id="productName" placeholder="Name" required [(ngModel)]="itemName" ngControl="name" #name="ngForm">
-            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">Name is required</div>
+            <input class="form-control" id="productName" placeholder="Name" required ngControl="itemName">
+<!--             <div [hidden]="itemName.valid || itemName.pristine" class="alert alert-danger">Name is required</div> -->
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
-            <input class="form-control" id="productCode" placeholder="Code" [(ngModel)]="itemCode">
+            <input class="form-control" id="productCode" placeholder="Code" ngControl="itemCode">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" [disabled]="!createForm.form.valid">Save & Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" [disabled]="!createForm.form.valid" (click)='submitItem(createForm.value)'>Save & Close</button>
           </div>
         </form>
       </div>
