--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -6,18 +6,18 @@
         <h4 class="modal-title" id="itemCreateModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-        <form #createForm="ngForm">
+        <form [ngFormModel]="createForm">
           <div class="form-group">
             <label for="productName">Product Name</label>
-            <input class="form-control" id="productName" placeholder="Name" required ngControl="itemName">
+            <input class="form-control" id="productName" placeholder="Name" required [ngFormControl]="createForm.controls['itemName']">
 <!--             <div [hidden]="itemName.valid || itemName.pristine" class="alert alert-danger">Name is required</div> -->
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
-            <input class="form-control" id="productCode" placeholder="Code" ngControl="itemCode">
+            <input class="form-control" id="productCode" placeholder="Code" [ngFormControl]="createForm.controls['itemCode']">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" [disabled]="!createForm.form.valid" (click)='submitItem(createForm.value)'>Save & Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(createForm.value)'>Save & Close</button>
           </div>
         </form>
       </div>
