--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -10,7 +10,7 @@
           <div class="form-group">
             <label for="productName">Product Name</label>
             <input class="form-control" id="productName" placeholder="Name" required [ngFormControl]="createForm.controls['itemName']">
-<!--             <div [hidden]="itemName.valid || itemName.pristine" class="alert alert-danger">Name is required</div> -->
+            <div *ngIf="createForm.hasError('required', 'itemNameControl')" class="alert alert-danger">Name is required</div>
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
