--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -9,15 +9,16 @@
         <form [ngFormModel]="createForm">
           <div class="form-group">
             <label for="productName">Product Name</label>
-            <input class="form-control" id="productName" placeholder="Name" required [ngFormControl]="createForm.controls['itemName']">
-            <div *ngIf="createForm.hasError('required', 'itemNameControl')" class="alert alert-danger">Name is required</div>
+            <input class="form-control" id="productName" placeholder="Name" [ngFormControl]="createForm.controls['itemName']">
+            <div *ngIf="check()" class="alert alert-danger">Name is invalid</div>
+            <div *ngIf="check()" class="alert alert-danger">Name is required</div>
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
             <input class="form-control" id="productCode" placeholder="Code" [ngFormControl]="createForm.controls['itemCode']">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(createForm.value)'>Save & Close</button>
+            <button [disabled]="!createForm.valid" type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(createForm.value)'>Save & Close</button>
           </div>
         </form>
       </div>
