--- a/app/items/item-create/item-create.component.html
+++ b/app/items/item-create/item-create.component.html
@@ -10,12 +10,12 @@
           <div class="form-group">
             <label for="productName">Product Name</label>
             <input class="form-control" id="productName" placeholder="Name" [ngFormControl]="createForm.controls['itemName']">
-            <div *ngIf="check()" class="alert alert-danger">Name is invalid</div>
-            <div *ngIf="check()" class="alert alert-danger">Name is required</div>
+            <div *ngIf="check('itemName').result" class="alert alert-danger">{{check('itemName').message}}</div>
           </div>
           <div class="form-group">
             <label for="productCode">Product Code</label>
             <input class="form-control" id="productCode" placeholder="Code" [ngFormControl]="createForm.controls['itemCode']">
+            <div *ngIf="check('itemCode').result" class="alert alert-danger">{{check('itemCode').message}}</div>
           </div>
           <div class="modal-footer">
             <button [disabled]="!createForm.valid" type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(createForm.value)'>Save & Close</button>
