--- a/app/items/item/item.component.html
+++ b/app/items/item/item.component.html
@@ -3,6 +3,6 @@
 </div>
 <a [routerLink]="['Cart', {userid: 'fawad@outlook.com'}]" class="btn btn-success" role="button">Cart</a>
 <div>
-  <create-item> </create-item>
+  <custom-form [modalId]='modalIdentifier'> </custom-form>
   <list-item></list-item>
 </div>
