--- a/app/items/shared/form.component.html
+++ b/app/items/shared/form.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="{{item.itemId}}Modal" tabindex="-1" role="dialog" aria-labelledby="itemCreateModalLabel">
+<div class="modal fade" id={{modalId}} tabindex="-1" role="dialog" aria-labelledby="itemCreateModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
