--- a/app/items/item-cart/item-cart.component.html
+++ b/app/items/item-cart/item-cart.component.html
@@ -9,8 +9,8 @@
         <th></th>
     </tr>
     <tr *ngFor='let c of cart'>
-        <td>{{c.item.itemName}}</td>
-        <td>{{c.item.price}}</td>
+        <td>{{c.item.name}}</td>
+        <td>{{c.item.unitPrice}}</td>
         <td>{{c.quantity}}</td>
         <td></td>
         <td>
