--- a/app/items/item-detail/item-detail.component.html
+++ b/app/items/item-detail/item-detail.component.html
@@ -7,8 +7,8 @@
 <div class="thumbnail">
     <img class="img-responsive" src="http://placehold.it/800x300" alt="">
     <div class="caption-full">
-        <h4 class="pull-right">${{ item.price }}</h4>
-        <h4><a href="#">{{ item.itemName }}</a>
+        <h4 class="pull-right">${{ item.unitPrice }}</h4>
+        <h4><a href="#">{{ item.name }}</a>
         </h4>
         <p>{{ item.description }}</p>
     </div>
