--- a/app/items/item-list/item-list.component.html
+++ b/app/items/item-list/item-list.component.html
@@ -19,9 +19,9 @@
       <div class="thumbnail">
           <img src="http://placehold.it/320x150" alt="">
           <div class="caption">
-              <h4 class="pull-right">${{ item.price }}</h4>
-              <h4><a href="#">{{ item.itemName }}</a>
-              <a data-toggle="modal" href="#{{item.itemId}}">
+              <h4 class="pull-right">${{ item.unitPrice }}</h4>
+              <h4><a href="#">{{ item.name }}</a>
+              <a data-toggle="modal" href="#{{item.id}}">
               <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
             </a>
               </h4>
@@ -39,7 +39,7 @@
               <a href="#" class="btn btn-default btn disabled" role="button">
                 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>&nbsp;<span class="badge">4</span>
               </a>
-              <a [routerLink]="['Detail', {id: item.itemId}]" class="btn btn-success" role="button">
+              <a [routerLink]="['Detail', {id: item.id}]" class="btn btn-success" role="button">
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
               </a>
               <!-- <button type="button" class="btn btn-default btn-xs">Comment</button> -->
@@ -48,7 +48,7 @@
                       (click)='toggleImg()'>
                   {{ showImg ? 'Hide' : 'Show' }} Image
               </button> -->
-              <custom-form [item]='item' [modalId]='item.itemId'></custom-form>
+              <custom-form [item]='item' [modalId]='item.id'></custom-form>
             </div>
 <!--             <div class="col-md-0">
               <textarea></textarea>
