--- a/app/items/shared/form.component.html
+++ b/app/items/shared/form.component.html
@@ -7,6 +7,11 @@
       </div>
       <div class="modal-body">
         <form [ngFormModel]="customForm">
+        <div class="form-group">
+          <label for="productName">ID</label>
+          <input class="form-control" id="id" placeholder="ID" [ngFormControl]="customForm.controls['id']">
+          <div *ngIf="validService.check('id').result" class="alert alert-danger">{{validService.check('id').message}}</div>
+        </div>
           <div class="form-group">
             <label for="productName">Product Name</label>
             <input class="form-control" id="name" placeholder="Name" [ngFormControl]="customForm.controls['name']">
