inc|dec quantity of cart items now service and db driven

--- a/app/item-cart/item-cart.component.html
+++ b/app/item-cart/item-cart.component.html
@@ -15,10 +15,10 @@
         <td></td>
         <td>
             <p>
-                <button type="button" class="btn btn-default btn-xs" (click)='cartService.increaseQunatity(c)'>
+                <button type="button" class="btn btn-default btn-xs" (click)='increaseQuantity(c)'>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
-                <button type="button" class="btn btn-default btn-xs" (click)='cartService.decreaseQunatity(c)'>
+                <button type="button" class="btn btn-default btn-xs" (click)='decreaseQunatity(c)'>
                     <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
                 <button type="button" class="btn btn-danger btn-xs" (click)='cartService.removeItem(c)'>Delete</button>
