added optiont to delete cart line item

--- a/app/item-cart/item-cart.component.html
+++ b/app/item-cart/item-cart.component.html
@@ -21,7 +21,7 @@
                 <button type="button" class="btn btn-default btn-xs" (click)='decreaseQunatity(c)'>
                     <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
-                <button type="button" class="btn btn-danger btn-xs" (click)='cartService.removeItem(c)'>Delete</button>
+                <button type="button" class="btn btn-danger btn-xs" (click)='removeItem(c)'>Delete</button>
             </p>
         </td>
     </tr>
