--- a/app/item-detail/item-detail.component.html
+++ b/app/item-detail/item-detail.component.html
@@ -4,7 +4,7 @@
 <div class="well">
 	<a class="btn btn-default" role="button" (click)='goBack()'>Back</a>	
 </div>
-<div class="thumbnail">
+<div class="thumbnail" *ngIf='item'>
     <img class="img-responsive" src="http://placehold.it/800x300" alt="">
     <div class="caption-full">
         <h4 class="pull-right">${{ item.unitPrice }}</h4>
