--- a/app/item-list/item-list.component.html
+++ b/app/item-list/item-list.component.html
@@ -26,7 +26,7 @@
           <img src="http://placehold.it/320x150" alt="">
           <div class="caption">
               <h4 class="pull-right">${{ item.unitPrice }}</h4>
-              <h4><a href="#">{{ item.name }}</a>
+              <h4>{{ item.name }}
               <a data-toggle="modal" href="#{{item.id}}">
               <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
             </a>
