--- a/app/shop/shop-item-form/shop-item-form.component.html
+++ b/app/shop/shop-item-form/shop-item-form.component.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id={{modalId}} tabindex="-1" role="dialog" aria-labelledby="itemCreateModalLabel">
+<div class="modal fade" id={{modalId}} tabindex="-1" role="dialog" aria-labelledby="shopItemModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="itemCreateModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="shopItemModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
         <form [ngFormModel]="customForm">
