--- a/app/shop/shop-item-detail/shop-item-detail.component.html
+++ b/app/shop/shop-item-detail/shop-item-detail.component.html
@@ -4,29 +4,33 @@
             <li><a class="btn btn-default btn-link" role="button" (click)='goBack()'>Home</a></li>
             <li class="active">Detail</li>
         </ol>
-        <div class="thumbnail" *ngIf='item'>
+        <div class="thumbnail" *ngIf='shopItem'>
             <div class="row">
-                <div class="col-md-10"><img class="img-responsive" src="http://placehold.it/800x300" alt=""></div>
+                <div class="col-md-10">
+                    <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                </div>
                 <div class="col-md-2">
-                    <h1><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></h1>
+                    <h1>
+                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                    </h1>
                     <dl>
                         <br/>
                         <dt>Code</dt>
-                        <dd>{{ item.code }}</dd>
+                        <dd>{{ shopItem.code }}</dd>
                         <br/>
                         <dt>Quantity In Stock</dt>
-                        <dd>{{ item.quantityInStock }}</dd>
+                        <dd>{{ shopItem.quantityInStock }}</dd>
                         <br/>
                         <dt>Release Date</dt>
-                        <dd>{{ item.releaseDate }}</dd>
+                        <dd>{{ shopItem.releaseDate }}</dd>
                     </dl>
                     <a class="btn btn-default btn-sm" role="button" (click)='goBack()'>Back</a>
                 </div>
             </div>
             <div class="caption-full">
-                <h4 class="pull-right">${{ item.unitPrice }}</h4>
-                <h4>{{ item.name }}</h4>
-                <p>{{ item.description }}</p>
+                <h4 class="pull-right">${{ shopItem.unitPrice }}</h4>
+                <h4>{{ shopItem.name }}</h4>
+                <p>{{ shopItem.description }}</p>
             </div>
             <div class="ratings">
                 <p class="pull-right">3 reviews</p>
@@ -43,9 +47,7 @@
             <p class="pull-right">
                 <a class="btn btn-success">Leave a Review</a>
             </p>
-            <h4>
-        Customers' Reviews
-    </h4>
+            <h4>Customers' Reviews</h4>
             <hr>
             <div class="row">
                 <div class="col-md-12">
@@ -55,31 +57,7 @@
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star-empty"></span> Anonymous
                     <span class="pull-right">10 days ago</span>
-                    <p>This product was great in terms of quality. I would definitely buy another!</p>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-12">
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span> Anonymous
-                    <span class="pull-right">12 days ago</span>
-                    <p>I've alredy ordered another one!</p>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-12">
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span> Anonymous
-                    <span class="pull-right">15 days ago</span>
-                    <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
+                    <p>This is placeholder text.</p>
                 </div>
             </div>
         </div>
