--- a/app/shop/shop-item-form/shop-item-form.component.html
+++ b/app/shop/shop-item-form/shop-item-form.component.html
@@ -1,52 +1,54 @@
 <div class="modal fade" id={{modalId}} tabindex="-1" role="dialog" aria-labelledby="shopItemModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="shopItemModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        <form [ngFormModel]="customForm">
-        <div class="form-group">
-          <label for="productName">ID</label>
-          <input class="form-control" id="id" placeholder="ID" [ngFormControl]="customForm.controls['id']">
-          <div *ngIf="validService.check('id').result" class="alert alert-danger">{{validService.check('id').message}}</div>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="shopItemModalLabel">Shop Item</h4>
+            </div>
+            <div class="modal-body">
+                <form [ngFormModel]="shopItemForm">
+                    <div class="form-group">
+                        <label for="productName">ID</label>
+                        <input class="form-control" id="id" placeholder="ID" [ngFormControl]="shopItemForm.controls['id']">
+                        <div *ngIf="validation.check('id').result" class="alert alert-danger">{{validation.check('id').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Product Name</label>
+                        <input class="form-control" id="name" placeholder="Name" [ngFormControl]="shopItemForm.controls['name']">
+                        <div *ngIf="validation.check('name').result" class="alert alert-danger">{{validation.check('name').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="code">Product Code</label>
+                        <input class="form-control" id="code" placeholder="Code" [ngFormControl]="shopItemForm.controls['code']">
+                        <div *ngIf="validation.check('code').result" class="alert alert-danger">{{validation.check('code').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="unitPrice">Unit Price</label>
+                        <input class="form-control" id="unitPrice" placeholder="Unit Price" [ngFormControl]="shopItemForm.controls['unitPrice']">
+                        <div *ngIf="validation.check('unitPrice').result" class="alert alert-danger">{{validation.check('unitPrice').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="quantityInStock">Quantity In Stock</label>
+                        <input class="form-control" id="quantityInStock" placeholder="Quantity In Stock" [ngFormControl]="shopItemForm.controls['quantityInStock']">
+                        <div *ngIf="validation.check('quantityInStock').result" class="alert alert-danger">{{validation.check('quantityInStock').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="releaseDate">Release Date</label>
+                        <input class="form-control" id="releaseDate" placeholder="releaseDate" [ngFormControl]="shopItemForm.controls['releaseDate']">
+                        <div *ngIf="validation.check('releaseDate').result" class="alert alert-danger">{{validation.check('releaseDate').message}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control" id="description" placeholder="description" [ngFormControl]="shopItemForm.controls['description']"></textarea>
+                        <div *ngIf="validation.check('description').result" class="alert alert-danger">{{validation.check('description').message}}</div>
+                    </div>
+                    <div class="modal-footer">
+                        <button [disabled]="!shopItemForm.valid" type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(shopItemForm)'>Save & Close</button>
+                    </div>
+                </form>
+            </div>
         </div>
-          <div class="form-group">
-            <label for="name">Product Name</label>
-            <input class="form-control" id="name" placeholder="Name" [ngFormControl]="customForm.controls['name']">
-            <div *ngIf="validService.check('name').result" class="alert alert-danger">{{validService.check('name').message}}</div>
-          </div>
-          <div class="form-group">
-            <label for="code">Product Code</label>
-            <input class="form-control" id="code" placeholder="Code" [ngFormControl]="customForm.controls['code']">
-            <div *ngIf="validService.check('code').result" class="alert alert-danger">{{validService.check('code').message}}</div>
-          </div>
-          <div class="form-group">
-            <label for="unitPrice">Unit Price</label>
-            <input class="form-control" id="unitPrice" placeholder="Unit Price" [ngFormControl]="customForm.controls['unitPrice']">
-            <div *ngIf="validService.check('unitPrice').result" class="alert alert-danger">{{validService.check('unitPrice').message}}</div>
-          </div>
-          <div class="form-group">
-            <label for="quantityInStock">Quantity In Stock</label>
-            <input class="form-control" id="quantityInStock" placeholder="Quantity In Stock" [ngFormControl]="customForm.controls['quantityInStock']">
-            <div *ngIf="validService.check('quantityInStock').result" class="alert alert-danger">{{validService.check('quantityInStock').message}}</div>
-          </div>
-          <div class="form-group">
-            <label for="releaseDate">Release Date</label>
-            <input class="form-control" id="releaseDate" placeholder="releaseDate" [ngFormControl]="customForm.controls['releaseDate']">
-            <div *ngIf="validService.check('releaseDate').result" class="alert alert-danger">{{validService.check('releaseDate').message}}</div>
-          </div>
-          <div class="form-group">
-            <label for="description">Description</label>
-            <textarea class="form-control" id="description" placeholder="description" [ngFormControl]="customForm.controls['description']"></textarea>
-            <div *ngIf="validService.check('description').result" class="alert alert-danger">{{validService.check('description').message}}</div>
-          </div>
-          <div class="modal-footer">
-            <button [disabled]="!customForm.valid" type="button" class="btn btn-default" data-dismiss="modal" (click)='submitItem(customForm)'>Save & Close</button>
-          </div>
-        </form>
-      </div>
     </div>
-  </div>
 </div>
